[package]
authors = ["Fredrik <simson@thesimson.net>"]
edition = "2018"
readme = "README.md"
name = "quickstart-blinky"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.1"
embedded-hal = "0.2.2"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# [dependencies.stm32l4x6]
# features = ["rt"]
# path = "/home/simson/rustlib/stm32l4x6"

[dependencies.stm32l476rg]
## features = ["rt"]
path = "../../baremetal/stm32l476rg"

[dependencies.stm32l4x6-hal]
features = ["rt"]
# version =  "0.1.0"
path = "/home/simson/rustlib/stm32l4x6_hal"

# this lets you use `cargo fix`!
[[bin]]
name = "quickstart-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
