[package]
authors = ["Fredrik <simson@thesimson.net>"]
edition = "2018"
readme = "README.md"
name = "quickstart-blinky"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.3.5"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.1"
stm32l4x6 = "0.5.1"
# path = "/home/simson/rustlib/stm32l4x6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.bmlite]
path = "../lite"
default-features = false

[dependencies.stm32l4x6-hal]
features = ["rt"]
git = "https://github.com/simonsso/stm32l4x6_hal.git"
#path = "/home/simson/rustlib/stm32l4x6_hal"
#path = "../stm32l4x6_hal"


[dependencies.crc]
version = "^1.0.0"
default-features = false



# this lets you use `cargo fix`!
[[bin]]
name = "quickstart-blinky"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = 3
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash

